@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) [2018-2022] Payara Foundation and/or its affiliates. All rights reserved.
+ * Copyright (c) [2018-2023] Payara Foundation and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -40,6 +40,7 @@
 package fish.payara.microprofile.openapi.impl.visitor;
 
 import fish.payara.microprofile.openapi.api.visitor.ApiContext;
+import fish.payara.microprofile.openapi.impl.model.responses.APIResponseImpl;
 import fish.payara.microprofile.openapi.impl.model.util.ModelUtils;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -63,6 +64,7 @@ import jakarta.ws.rs.POST;
 import jakarta.ws.rs.PUT;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.core.Application;
+import java.lang.reflect.InvocationTargetException;
 import org.eclipse.microprofile.openapi.models.OpenAPI;
 import org.eclipse.microprofile.openapi.models.Operation;
 import org.eclipse.microprofile.openapi.models.PathItem;
@@ -90,7 +92,7 @@ public class OpenApiContext implements ApiContext {
 
     private Map<ExtensibleType<? extends ExtensibleType>, AnnotationInfo> parsedTypes = new ConcurrentHashMap<>();
 
-    private Map<String, APIResponse> mappedExceptionResponses = new ConcurrentHashMap<>();
+    private Map<String, Set<APIResponse>> mappedExceptionResponses = new ConcurrentHashMap<>();
 
     public OpenApiContext(Types allTypes, Set<Type> allowedTypes, ClassLoader appClassLoader, OpenAPI api) {
         this.allTypes = allTypes;
@@ -135,12 +137,18 @@ public class OpenApiContext implements ApiContext {
     @Override
     public void addMappedExceptionResponse(String exceptionType, APIResponse exceptionResponse) {
         if (exceptionType != null) {
-            mappedExceptionResponses.put(exceptionType, exceptionResponse);
+            if(mappedExceptionResponses.containsKey(exceptionType)) {
+                mappedExceptionResponses.get(exceptionType).add(exceptionResponse);
+            } else {
+                Set set = new HashSet<>();
+                set.add(exceptionResponse);
+                mappedExceptionResponses.put(exceptionType, set);
+            }
         }
     }
 
     @Override
-    public Map<String, APIResponse> getMappedExceptionResponses() {
+    public Map<String, Set<APIResponse>> getMappedExceptionResponses() {
         return Collections.unmodifiableMap(mappedExceptionResponses);
     }
 
@@ -186,7 +194,7 @@ public class OpenApiContext implements ApiContext {
                     mapping.put(key, resourceClasses);
                     try {
                         Class<?> clazz = appClassLoader.loadClass(classModel.getName());
-                        Application app = (Application) clazz.newInstance();
+                        Application app = (Application) clazz.getDeclaredConstructor().newInstance();
                         // Add all classes contained in the application
                         resourceClasses.addAll(app.getClasses()
                                 .stream()
@@ -195,7 +203,9 @@ public class OpenApiContext implements ApiContext {
                                 .map(allTypes::getBy)
                                 .filter(Objects::nonNull)
                                 .collect(toSet()));
-                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
+                            | NoSuchMethodException | IllegalArgumentException
+                            | SecurityException | InvocationTargetException ex) {
                         LOGGER.log(WARNING, "Unable to initialise application class.", ex);
                     }
                 } else {
